--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,37 @@
         <a href="faq.html">FAQ</a>
         <a href="contato.html">Contato</a>
     </nav>
-    
+    <main>
+        <form action="" method="post" enctype="multipart/form-data">
+            <fieldset>
+                <legend>Contato</legend>
+                <div>
+                    <label for="nome">Nome: </label>
+                    <input type="text" name="nome" id="nome" placeholder="João">
+                </div>
+                <div>
+                    <label for="email">E-mail: </label>
+                    <input type="email" name="email" id="nome" placeholder="user@email">
+                </div>
+                <div>
+                    <input type="radio" name="sexo" value="1" id="masculino">
+                    <label for="masculino">Masculino</label>
+                    <input type="radio" name="sexo" value="2" id="feminino">
+                    <label for="feminino">Feminino</label>
+                </div>
+                <div>
+                    <label for="estado">Estado/Cidade</label>
+                    <select name="estado" id="estado">
+                        <option value=""></option>
+                        <option value="mg">MG</option>
+                        <option value="rj">RJ</option>
+                        <option value="sp">SP</option>
+                    </select>
+                    <input type="text" name="cidade" placeholder="Varginha">
+                </div>
+            </fieldset>
+                
+    </main>
 
     <footer>
         <h4>© copyleft </h4>
