--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./faq.css">
 </head>
 <body>
     <header>
@@ -16,41 +17,43 @@
         <a href="faq.html">FAQ</a>
         <a href="contato.html">Contato</a>
     </nav>
-    <main>
-        <div>
+    <main id="topo">
+        <div class="pergunta">
             <ol>
                 <li>
                     <a href="#r1">Pergunta 1</a>
                 </li>
                 <li>
-                    <a href="#r1">Pergunta 2</a>
+                    <a href="#r2">Pergunta 2</a>
                 </li>
                 <li>
-                    <a href="#r1">Pergunta 3</a>
+                    <a href="#r3">Pergunta 3</a>
                 </li>
                 <li>
-                    <a href="#r1">Pergunta 4</a>
+                    <a href="#r4">Pergunta 4</a>
                 </li>
                 <li>
-                    <a href="#r1">Pergunta 5</a>
+                    <a href="#r5">Pergunta 5</a>
                 </li>
             </ol>
         </div>
-        <p id="r1">
-            Resposta 1 <a href="#topo">Voltar</a>
-        </p>
-        <p id="r2">
-            Resposta 1 <a href="#topo">Voltar</a>
-        </p>
-        <p id="r3">
-            Resposta 1 <a href="#topo">Voltar</a>
-        </p>
-        <p id="r4">
-            Resposta 1 <a href="#topo">Voltar</a>
-        </p>
-        <p id="r5">
-            Resposta 1 <a href="#topo">Voltar</a>
-        </p>
+        <div class="resposta">
+            <p id="r1">
+                <b>Resposta 1</b><a href="#topo">Voltar</a>
+            </p>
+            <p id="r2">
+                <b>Resposta 2</b><a href="#topo">Voltar</a>
+            </p>
+            <p id="r3">
+                <b>Resposta 3</b><a href="#topo">Voltar</a>
+            </p>
+            <p id="r4">
+                <b>Resposta 4</b><a href="#topo">Voltar</a>
+            </p>
+            <p id="r5">
+                <b>Resposta 5</b><a href="#topo">Voltar</a>
+            </p>
+        </div>
 
     </main>
     <footer>
