--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="faq.html">FAQ</a>
         <a href="contato.html">Contato</a>
     </nav>
-    <main>
+    <main class="index">
         <div>
         <h3>Apresentação</h3>
             <p>O curso técnico de Informática no CEFETMG começou a funcionar em 1989, com 40 alunos.
@@ -39,7 +39,7 @@
         <div>
             <h3>Modalidades</h3>
             <ul style="list-style-type: square;">
-                <li>Integrados. em 3 anos - Diurno</li>
+                <li>Integrados, em 3 anos - Diurno</li>
             </ul>
         </div>
     </main>
