--- a/curso.html
+++ b/curso.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso</title>
+    <link rel="stylesheet" href="./curso.css">
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -18,21 +19,21 @@
     </nav>
     <main class="tabela">
         <table>
-            <h4>Curso</h4>
+            <h3>Curso</h3>
             <tr>
-                <td>Área</td>
-                <td>Ano</td>
-                <td colspan="5">Disciplina</td>
-                <td>1a Série</td>
-                <td>2a Série</td>
-                <td>3a Série</td>
+                <td><b>Área</b></td>
+                <td><b>Ano</b></td>
+                <td colspan="5"><b>Disciplina</b></td>
+                <td><b>1a Série</b></td>
+                <td><b>2a Série</b></td>
+                <td><b>3a Série</b></td>
             </tr>
             <tr>
-                <td colspan="10">Parte Específica</td>
+                <td colspan="10"><b>PARTE ESPECÍFICA</b></td>
             </tr>
             <tr>
-                <td rowspan="11">Técnica</td>
-                <td rowspan="3">1o Ano</td>
+                <td rowspan="11"><b>Técnica</b></td>
+                <td rowspan="3"><b>1o Ano</b></td>
                 <td colspan="5">Banco de Dados</td>
                 <td>2</td>
                 <td>0</td>
@@ -51,7 +52,7 @@
                 <td>0</td>
             </tr>
             <tr>
-                <td rowspan="4">2o Ano</td>
+                <td rowspan="4"><b>2o Ano</b></td>
                 <td colspan="5">Aplicações web I</td>
                 <td>0</td>
                 <td>4</td>
@@ -76,7 +77,7 @@
                 <td>0</td>
             </tr>
             <tr>
-                <td rowspan="4">2o Ano</td>
+                <td rowspan="4"><b>2o Ano</b></td>
                 <td colspan="5">Aplicações web II</td>
                 <td>0</td>
                 <td>0</td>
@@ -101,17 +102,13 @@
                 <td>4</td>
             </tr>
             <tr>
-                <td colspan="7">Total</td>
-                <td>8</td>
-                <td>12</td>
-                <td>16</td>
+                <td colspan="7"><b>Total</b></td>
+                <td><b>8</b></td>
+                <td><b>12</b></td>
+                <td><b>16</b></td>
             </tr>
         </main>
     </table>
-
-    
-
-
     <footer>
         <h4>© copyleft </h4>
     </footer>
