--- a/curso.html
+++ b/curso.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./curso.css">
     <link rel="stylesheet" href="./index.css">
 </head>
+
 <body>
     <header>
         <h1>CEFET-MG - Campus Varginha - Curso Técnico</h1>
@@ -19,96 +21,102 @@
     </nav>
     <main class="tabela">
         <table>
-            <h3>Curso</h3>
-            <tr>
-                <td><b>Área</b></td>
-                <td><b>Ano</b></td>
-                <td colspan="5"><b>Disciplina</b></td>
-                <td><b>1a Série</b></td>
-                <td><b>2a Série</b></td>
-                <td><b>3a Série</b></td>
-            </tr>
-            <tr>
-                <td colspan="10"><b>PARTE ESPECÍFICA</b></td>
-            </tr>
-            <tr>
-                <td rowspan="11"><b>Técnica</b></td>
-                <td rowspan="3"><b>1o Ano</b></td>
-                <td colspan="5">Banco de Dados</td>
-                <td>2</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td colspan="5">Fundamentos de Informática</td>
-                <td>2</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td colspan="5">Programação I</td>
-                <td>2</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td rowspan="4"><b>2o Ano</b></td>
-                <td colspan="5">Aplicações web I</td>
-                <td>0</td>
-                <td>4</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td colspan="5">Estrutura de Dados</td>
-                <td>0</td>
-                <td>4</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td colspan="5">Programação II</td>
-                <td>0</td>
-                <td>4</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td colspan="5">Redes de Computadores</td>
-                <td>0</td>
-                <td>2</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td rowspan="4"><b>2o Ano</b></td>
-                <td colspan="5">Aplicações web II</td>
-                <td>0</td>
-                <td>0</td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td colspan="5">Aplicações Móveis</td>
-                <td>0</td>
-                <td>0</td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td colspan="5">Engenharia de Software</td>
-                <td>0</td>
-                <td>0</td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td colspan="5">Montagem e Manutenção de Computadores</td>
-                <td>0</td>
-                <td>0</td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td colspan="7"><b>Total</b></td>
-                <td><b>8</b></td>
-                <td><b>12</b></td>
-                <td><b>16</b></td>
-            </tr>
-        </main>
-    </table>
+            <legend>Curso</legend>
+            <thead>
+                <tr>
+                    <td><b>Área</b></td>
+                    <td><b>Ano</b></td>
+                    <td><b>Disciplina</b></td>
+                    <td><b>1a Série</b></td>
+                    <td><b>2a Série</b></td>
+                    <td><b>3a Série</b></td>
+                </tr>
+                <tr>
+                    <td colspan="6"><b>PARTE ESPECÍFICA</b></td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td rowspan="11"><b>Técnica</b></td>
+                    <td rowspan="3"><b>1o Ano</b></td>
+                    <td class="materia">Banco de Dados</td>
+                    <td>2</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td class="materia">Fundamentos de Informática</td>
+                    <td>2</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td class="materia">Programação I</td>
+                    <td>2</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td rowspan="4"><b>2o Ano</b></td>
+                    <td class="materia">Aplicações web I</td>
+                    <td>0</td>
+                    <td>4</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td class="materia">Estrutura de Dados</td>
+                    <td>0</td>
+                    <td>4</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td class="materia">Programação II</td>
+                    <td>0</td>
+                    <td>4</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td class="materia">Redes de Computadores</td>
+                    <td>0</td>
+                    <td>2</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td rowspan="4"><b>2o Ano</b></td>
+                    <td class="materia">Aplicações web II</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td class="materia">Aplicações Móveis</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td class="materia">Engenharia de Software</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td class="materia">Montagem e Manutenção de Computadores</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>4</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3"><b>Total</b></td>
+                    <td><b>8</b></td>
+                    <td><b>12</b></td>
+                    <td><b>16</b></td>
+                </tr>
+            </tfoot>
+        </table>
+    </main>
     <footer>
         <h4>© copyleft </h4>
     </footer>
